--- a/PMHT/templates/navbar.html
+++ b/PMHT/templates/navbar.html
@@ -1,10 +1,9 @@
-
 <nav class="navbar">
     <ul>
-     <!--   <li><a href="test.html"></i> Test</a></li>
-        {% for categoria in categoriatest %}
-        <li><a href="{% url 'categoria_detalle' categoria_id=categoria.id %}">{{ categoria.nombre }}</a></li>
-        {% endfor %}-->
+        <li><a href="{% url 'calendario_psicologo' %}"><span class="fas fa-sign-in-alt"></span> Calendario</a></li>
+        <li><a href="{% url 'agendar_encuentro' %}"><span class="fas fa-sign-in-alt"></span> Agendamiento de encuentros</a></li>
+        <!-- <li><a href="{% url 'mostrar_encuentros' %}"><span class="fas fa-sign-in-alt"></span>psicologo</a></li>--> 
+        <li><a href="{% url 'categoria_detalle' categoria_id=1 %}"><span class="fas fa-sign-in-alt"></span> Diario</a></li>
         <li><a href="{% url 'logout' %}"><span class="fas fa-sign-in-alt"></span> Salir</a></li>
     </ul>
 </nav>
