--- a/PMHT/templates/register.html
+++ b/PMHT/templates/register.html
@@ -38,10 +38,9 @@
         <div class="ctn-text">
             <div class="capa"></div>
             <h1 class="title-description">Lorem ipsum dolor sit amet.</h1>
-            <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Nam in deleniti at assumenda similique facilis praesentium, 
-                numquam odit omnis molestiae beatae tempore autem, 
-                consequatur quas optio. Consectetur nisi est ullam?</p>
+            <h1 class="title-description">¡Descubre tu fortaleza interior!</h1>
+            <p class="text-description">Entra en un viaje hacia el autoconocimiento y la superación personal, 
+                donde encontrarás herramientas para tu bienestar emocional y mental.</p>
         </div>
     </div>
 </body>
